removed trailing slashes and unused endpoints
