# schema/swagger_output.json
@@ -21,26 +21,6 @@
     }
   ],
   "paths": {
-    "/": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/api/v1": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
     "/api/v1/auth/register": {
       "post": {
         "tags": [
@@ -117,7 +97,7 @@
         }
       }
     },
-    "/api/v1/users/": {
+    "/api/v1/users": {
       "get": {
         "tags": [
           "User"
@@ -276,7 +256,7 @@
         }
       }
     },
-    "/users/": {
+    "/users": {
       "get": {
         "tags": [
           "User"
